@@ -1,3 +1,8 @@
+2005-12-18  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/25481
+	* gcc.dg/torture/pr25481.c: New testcase.
+
 2005-12-18  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	PR rtl-optimization/21041
